2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodedynamicpropertymodule.vala:
	* gobject/valaccodedynamicsignalmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodestructmodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusservermodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valagsignalmodule.vala:
	* gobject/valagtypemodule.vala:

	Combine internal modules by inheritance to improve performance

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valagasyncmodule.vala:

	Add GAsyncModule

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valagsignalmodule.vala:
	* gobject/valagtypemodule.vala:

	Add GTypeModule, GObjectModule, and GSignalModule to replace
	GObjectInterfaceModule, GObjectClassModule, and
	GObjectSignalModule, resp.

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valagobjectclassmodule.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valagobjectsignalmodule.vala:

	Move parameter handling to GObjectClassModule and signal handling
	to GObjectSignalModule

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodeelementaccessmodule.vala:
	* gobject/valaccodegenerator.vala:

	Move element access handling to CCodeArrayModule

2008-11-02  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix comment generation of private enums, patch by Carlos Cadete,
	fixes bug 558533
